#6096 Multi-Select Matrix: Boolean question is not aligned within a column Fixes #6096

--- a/src/defaultV2-theme/blocks/sd-table.scss
+++ b/src/defaultV2-theme/blocks/sd-table.scss
@@ -346,3 +346,7 @@
     padding-top: calcSize(1);
   }
 }
+.sd-table__question-wrapper {
+  text-align: -webkit-center;
+  text-align: -moz-center;
+}
